--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
-.App {
-  text-align: center;
+body{
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.loginWrapper{
+  height: 100vh;
+  width: 100vw;
+  background-color: lightblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.innerTextInputWrapper{
+  height: 50%;
+  width: 25%;
+  background-color: white;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.customTextBox{
+  margin-top: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.customButtom{
+  margin-top: 40px;
+}
+
+.projektWrapper{
+  height: 100vh;
+  width: 100vw;
+}
+
+.projectOverviewHeader{
+  height: 10%;
+  width: 100%;
+  background-color: lightblue;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+
+.projectOverviewMain{
+  height: 90%;
+  width: 100%;
+  background-color: white;
+}
+
+.taskWrapper{
+  height: 100vh;
+  width: 100vw;
+}
+
+.taskOverviewHeader{
+  height: 10%;
+  width: 100%;
+  background-color: lightblue;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+
+.taskOverviewMain{
+  height: 90%;
+  width: 100%;
+  background-color: white;
 }
